[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/options.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Inconsolata-Reg-64.font" type="BitmapFont" id=2]
[ext_resource path="res://Fonts/Droid-Reg-32.font" type="BitmapFont" id=3]

[node name="options" type="Control"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = -1024.0
margin_top = -600.0
margin_right = -95.0
margin_bottom = -65.0
script = ExtResource( 1 )
controller_node = null
combine_streaks_node = NodePath("PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer/combine_streaks_btn")
combine_loops_node = NodePath("PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer/combine_loops_btn")
faster_in_loop_node = NodePath("PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer 2/faster_in_loop_btn")
enforce_8bit_node = NodePath("PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer 2/enforce_8bit")
zoom_slider = NodePath("PanelContainer/VBoxContainer/HBoxContainer 2/zoom_slider")
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="."]

anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 7.0
margin_top = 7.0
margin_right = 922.0
margin_bottom = 528.0
alignment = 1
mouse_filter = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 0.0
margin_top = 0.0
margin_right = 915.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="HBoxContainer 2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 58.0
margin_right = 915.0
margin_bottom = 91.0
alignment = 0
mouse_filter = 0

[node name="Label1" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 0
margin_left = 0.0
margin_top = 0.0
margin_right = 455.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Zoom"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="zoom_slider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 0
margin_left = 459.0
margin_top = 8.0
margin_right = 915.0
margin_bottom = 24.0
min_value = 0.25
max_value = 1.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2
mouse_filter = 0

[node name="HBoxContainer 3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 95.0
margin_right = 915.0
margin_bottom = 181.0
alignment = 0
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer 3"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 3
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 455.0
margin_bottom = 86.0
alignment = 0
mouse_filter = 0

[node name="combine_streaks_btn" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 455.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Combine Streaks"
flat = false
align = 0
mouse_filter = 0

[node name="combine_loops_btn" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 45.0
margin_right = 455.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Combine Loops"
flat = false
align = 0
mouse_filter = 0

[node name="VBoxContainer 2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer 3"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 3
size_flags_vertical = 1
margin_left = 459.0
margin_top = 0.0
margin_right = 915.0
margin_bottom = 86.0
alignment = 0
mouse_filter = 0

[node name="enforce_8bit" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 456.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "8bit Mode"
flat = false
align = 0
mouse_filter = 0

[node name="faster_in_loop_btn" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 45.0
margin_right = 456.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Faster in Loops"
flat = false
align = 0
mouse_filter = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 185.0
margin_right = 915.0
margin_bottom = 224.0
alignment = 0
mouse_filter = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
margin_left = 0.0
margin_top = 3.0
margin_right = 299.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "Speed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="speed_btn_1" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 1
margin_left = 303.0
margin_top = 0.0
margin_right = 452.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "0.5X"
flat = true
mouse_filter = 0

[node name="speed_btn_2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 1
margin_left = 456.0
margin_top = 0.0
margin_right = 605.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
text = "1X"
flat = true
mouse_filter = 0

[node name="speed_btn_3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 1
margin_left = 609.0
margin_top = 0.0
margin_right = 758.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "4X"
flat = true
mouse_filter = 0

[node name="speed_btn_4" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 1
margin_left = 762.0
margin_top = 0.0
margin_right = 915.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "20X"
flat = true
mouse_filter = 0

[node name="HBoxContainer1" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 228.0
margin_right = 915.0
margin_bottom = 267.0
alignment = 2
mouse_filter = 0

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 0
size_flags_vertical = 1
margin_left = 673.0
margin_top = 0.0
margin_right = 915.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Skip to end   ->|"
flat = false
mouse_filter = 0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 3
margin_left = 0.0
margin_top = 271.0
margin_right = 915.0
margin_bottom = 478.0
mouse_filter = 0

[node name="reset_btn" type="Button" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 482.0
margin_right = 915.0
margin_bottom = 521.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset Everything"
flat = false
mouse_filter = 0

[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer 2/zoom_slider" to="." method="_on_zoom_slider_value_changed" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer/combine_streaks_btn" to="." method="_on_combine_streaks_btn_toggled" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer/combine_loops_btn" to="." method="_on_combine_loops_btn_toggled" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer 2/enforce_8bit" to="." method="_on_enforce_8bit_btn_toggled" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer 3/VBoxContainer 2/faster_in_loop_btn" to="." method="_on_faster_in_loop_btn_toggled" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/speed_btn_1" to="." method="_on_speed_btn_1_toggled" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/speed_btn_2" to="." method="_on_speed_btn_2_toggled" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/speed_btn_3" to="." method="_on_speed_btn_3_toggled" binds=[  ]]

[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/speed_btn_4" to="." method="_on_speed_btn_4_toggled" binds=[  ]]

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer1/Button" to="." method="_on_Button_pressed" binds=[  ]]

[connection signal="pressed" from="PanelContainer/VBoxContainer/reset_btn" to="." method="_on_reset_btn_pressed" binds=[  ]]
